# H2H-Creator-startgg

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
H2H_Creator_startgg/: H2HCreator.py  __init__.py  api.py  creator.py  events.py  exceptions.py  players.py  queries.py  results.py  spreadsheets.py
examples/: H2H_table.csv  _example.md  events.json  players.json  players_results.json  tournament_results.json
src/: H2HCreator.py  api.py  creator.py  events.py  players.py  queries.py  results.py
