[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "H2H_Creator_startgg"
version = "0.4.2"
authors = [
  { name="ETossed", email="jthroughs@gmail.com" },
  { name="odds_or_evans" }
]
description = "H2H Spreadsheet Creator for startgg"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ETossed/H2H-Creator-startgg"
"Bug Tracker" = "https://github.com/ETossed/H2H-Creator-startgg/issues"